add link.xml and remove textures file

--- a/UnityFeatureModule/Packages/Decoration/package.json
+++ b/UnityFeatureModule/Packages/Decoration/package.json
@@ -9,5 +9,8 @@
     "name": "The One Game Studio",
     "email": "tuha@the1studio.org",
     "url": "https://theonegamestudio.com/"
+  },
+  "dependencies": {
+    "com.unity.render-pipelines.universal": "14.0.11"
   }
 }
